team crud and model filtering
